package com.yonatankarp.proxy

/**
 * Wizard.
 */
internal class Wizard(private val name: String) {
    override fun toString() = name
}
