package com.yonatankarp.proxy

/**
 * WizardTower interface.
 */
internal interface WizardTower {
    fun enter(wizard: Wizard)
}
