@startuml
package com.yonatankarp.proxy {
  class App {
  - logger : Logger {static}
    + App()
    + main(args : String[]) {static}
  }
  class IvoryTower {
    + IvoryTower()
    + enter(wizard : Wizard)
  }
  class Wizard {
    - name : String
    + Wizard(name : String)
    + toString() : String
  }
  interface WizardTower {
    + enter(Wizard) {abstract}
  }
  class WizardTowerProxy {
    - NUM_WIZARDS_ALLOWED : int {static}
    - numWizards : int
    - tower : WizardTower
    + WizardTowerProxy(tower : WizardTower)
    + enter(wizard : Wizard)
  }
}
WizardTowerProxy -->  "-tower" WizardTower
IvoryTower ..|> WizardTower
WizardTowerProxy ..|> WizardTower
@enduml
